homepage/dockerproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: dockerproxy
  name: dockerproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dockerproxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml convert
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: dockerproxy
    spec:
      containers:
        - env:
            - name: CONTAINERS
              value: "1"
            - name: POST
              value: "0"
            - name: SERVICES
              value: "1"
            - name: TASKS
              value: "1"
          image: ghcr.io/tecnativa/docker-socket-proxy:latest
          name: dockerproxy
          ports:
            - containerPort: 2375
              protocol: TCP
      restartPolicy: Always
