homepage/homepage-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: homepage
  name: homepage
spec:
  ports:
    - name: "3010"
      port: 3010
      targetPort: 3000
  selector:
    io.kompose.service: homepage
