homepage/homepage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - homepage.stone-lab.local
    secretName: homepage-tls
  rules:
  - host: homepage.stone-lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage-tcp-service
            port:
              number: 3010
